<resources>
    <string name="app_name">On The Table</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_menu">Menu</string>
    <string name="title_week_plan">Meal Plan</string>


    <string name="onTheTable">On The Table</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="headerOne_onboarding">Discovery And Plan Your Recipe</string>
    <string name="descriptionOne_onboarding">Tell us your food preference and we will serve you delicious recipes ideas</string>
    <string name="headerTwo_onboarding">All Your Favorite Recipes In One Place</string>
    <string name="descriptionTwo_onboarding">Save time on planning by having your favorite recipes within reach</string>
    <string name="headerWeekPlan">Ready to plan this week?</string>
    <string name="defaultHistroy">Aprial , 2023</string>
    <string name="saturday">SA.</string>
    <string name="sunday">SU.</string>
    <string name="monday">M.</string>
    <string name="tuesday">TU.</string>
    <string name="wednesday">W.</string>
    <string name="thursday">TH.</string>
    <string name="friday">F.</string>
    <string name="userName_setting">User Name</string>
    <string name="email_setting">Email@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="week_plan">Week Plan</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="favourit_meals_setting">Favourite Meals</string>
    <string name="add_meal">Add Meal</string>

    <string name="dish_of_the_day">Dish of the day</string>
    <string name="categories">Categories</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="start_cooking">Start Cooking!</string>
    <string name="singup">SingUp</string>
    <string name="don_t_have_an_account">Don’t have an account</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="already_have_account">Already have account</string>
    <string name="procedures">STEP 1\nTO MAKE SUSHI ROLLS: Pat out some rice. Lay a nori sheet on the mat, shiny-side down. Dip your hands in the vinegared water, then pat handfuls of rice on top in a 1cm thick layer, leaving the furthest edge from you clear.r\nr\nSTEP 2r\nSpread over some Japanese mayonnaise. Use a spoon to spread out a thin layer of mayonnaise down the middle of the rice.\nr\nSTEP 3r\nAdd the filling. Get your child to top the mayonnaise with a line of their favourite fillings – here we’ve used tuna and cucumber.\n\nSTEP 4r\nRoll it up. Lift the edge of the mat over the rice, applying a little pressure to keep everything in a tight roll.r\nr\nSTEP 5r\nStick down the sides like a stamp. When you get to the edge without any rice, brush with a little water and continue to roll into a tight roll.r\nr\nSTEP 6r\nWrap in cling film. Remove the mat and roll tightly in cling film before a grown-up cuts the sushi into thick slices, then unravel the cling film.r\nr\nSTEP 7r\nTO MAKE PRESSED SUSHI: Layer over some smoked salmon. Line a loaf tin with cling film, then place a thin layer of smoked salmon inside on top of the cling film.r\nr\nSTEP 8r\nCover with rice and press down. Press about 3cm of rice over the fish, fold the cling film over and press down as much as you can, using another tin if you have one.r\nr\nSTEP 9r\nTip it out like a sandcastle. Turn block of sushi onto a chopping board. Get a grown-up to cut into fingers, then remove the cling film.r\nr\nSTEP 10r\nTO MAKE SUSHI BALLS: Choose your topping. Get a small square of cling film and place a topping, like half a prawn or a small piece of smoked salmon, on it. Use damp hands to roll walnut-sized balls of rice and place on the topping.r\nr\nSTEP 11r\nMake into tight balls. Bring the corners of the cling film together and tighten into balls by twisting it up, then unwrap and serve.</string>
    <string name="main_ingredients">Main Ingredients</string>
    <string name="procedure">Procedure</string>
    <string name="you_might_like">You Might Like</string>
    <string name="video">Video</string>
    <string name="title_activity_regsiteration">RegsiterationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search_meal">Search by Meal</string>
    <string name="search_by_ingredients">Search by ingredients</string>
    <string name="search_by_cuisine">Search By Cuisine</string>
    <string name="egypt">Egypt</string>
    <string name="view_all"><u>View All</u></string>
    <string name="search_by_meal">Search by Meal</string>
    <string name="dessert">Dessert</string>
    <string name="search_by_country">Search by Country</string>
    <string name="search_by_ingredient">Search By Ingredient</string>
    <string name="result">Result from </string>
    <string name="search_by_categories">Search by Categories</string>
    <string name="search_for_a_meal">Search For A Meal</string>
    <string name="signup_successfully">SignedUp successfully</string>
    <string name="loggedIn_uccessfully">LoggedIn Successfully</string>
    <string name="favorite_meals">Favorite Meals</string>
    <string name="added_successfully_to_your_plan">Added successfully to your plan</string>
    <string name="Are_you_sure_you_want_to_delete_this_meal">Are you sure you want to delete this meal?</string>
    <string name="Delete_Meal">Delete Meal</string>
    <string name="added_to_favorites">added to favorites</string>
    <string name="Sign_Up_for_more_Feature">Sign Up for more Feature</string>
    <string name="goto_signUp_message">Add your food to Favorite, Plan your meals and more!</string>
    <string name="please_fill_all_data">Please fill all data</string>
    <string name="minmum_one_number">Minimum one number required</string>
    <string name="minimum_one_special_symbol">Minimum one special symbol required</string>
    <string name="minimum_one_uppercase">Minimum one uppercase required</string>
    <string name="At_least__8_character">At least 8 character</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="confirm_password_doesnt_match_password">Confirm password doesn\'t match password</string>
    <string name="sign_up_with_google_successfully">SignUp with google successfully</string>
    <string name="sign_up_with_google_failed">Sign up with google Failed!</string>
    <string name="enter_email">Enter email</string>
    <string name="send_email_toast">Email has been sent</string>


</resources>