<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/title_favorite" />
    <item
        android:id="@+id/navigation_weekPlan"
        android:icon="@drawable/baseline_calendar_today_24"
        android:title="@string/title_week_plan" />

<!--    <item-->
<!--        android:id="@+id/navigation_menu"-->
<!--        android:icon="@drawable/baseline_menu_24"-->
<!--        android:title="@string/title_menu" />-->


</menu>