<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/mealDetailsFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mad.iti.onthetable.ui.home.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.mad.iti.onthetable.ui.search.view.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.mad.iti.onthetable.ui.favorite.view.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.mad.iti.onthetable.ui.menu.view.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />
    <fragment
        android:id="@+id/navigation_weekPlan"
        android:name="com.mad.iti.onthetable.ui.weekplan.view.WeekPlanFragment"
        android:label="@string/title_week_plan"
        tools:layout="@layout/fragment_week_plan" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.mad.iti.onthetable.ui.registeration.login.view.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.mad.iti.onthetable.ui.registeration.singup.view.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_sign_up" >
        <action
            android:id="@+id/action_signUpFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/mealDetailsFragment"
        android:name="com.mad.iti.onthetable.ui.mealDetails.view.MealDetailsFragment"
        android:label="fragment_meal_details"
        tools:layout="@layout/fragment_meal_details" />
</navigation>