<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registeration.singup.view.SignUpFragment">


    <TextView
        android:id="@+id/textViewGoToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/login"
        android:textColor="@color/cadmium_orange"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/already_have_account"
        android:textColor="@color/outline_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewGoToLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/googleSignIN" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassWord"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password_InputLayout"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutEmailSignUP"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutEmailSignUP"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmailSignUP">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPassSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        android:text="@string/sign_up"
        android:textColor="@color/neutral"
        app:layout_constraintBottom_toTopOf="@+id/googleSignIN"
        app:layout_constraintEnd_toEndOf="@+id/confirm_password_InputLayout"
        app:layout_constraintStart_toStartOf="@+id/confirm_password_InputLayout"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_InputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmailSignUP"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutPassWord"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView6"
        style="@style/appNameInLoginAndSignUp"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutEmailSignUP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_InputLayout"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutPassWord"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutPassWord"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassWord">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextConfirmPassSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/googleSignIN"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/google"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/buttonSignUp"
        app:layout_constraintStart_toStartOf="@+id/buttonSignUp"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp" />


</androidx.constraintlayout.widget.ConstraintLayout>